test/conformance/chainsaw/reports/admission/namespaceselector/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-audit-reports-namespacesselector
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
