test/conformance/chainsaw/reports/admission/namespaceselector/02-pod.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: pod
spec:
  try:
  - apply:
      file: pods.yaml
  - assert:
      file: pods.yaml
