test/conformance/chainsaw/reports/admission/namespaceselector/03-report.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: report
spec:
  try:
  - assert:
      file: report-expected.yaml
  - error:
      file: report-unexpected.yaml
