test/conformance/chainsaw/reports/admission/namespaceselector/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: namespaceselector
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - assert:
        file: pods.yaml
  - name: step-03
    try:
    - assert:
        file: report-expected.yaml
    - error:
        file: report-unexpected.yaml
